@@ -36,6 +36,7 @@ master
   built-in functions from C.
 - Print VCToolsVersion used for compiler compilation.
 - Build pipeline now use regular main function as an entry point.
+- Fix volatile type propagation where explicit cast was required for non-s32 number literals in binop.
 
 [Modules]
 
